tests/ui/not-panic/not-panic-safe.stderr
error[E0277]: the type `&mut &mut &i32` may not be safely transferred across an unwind boundary
  --> $DIR/not-panic-safe.rs:8:14
   |
LL |     assert::<&mut &mut &i32>();
   |              ^^^^^^^^^^^^^^ `&mut &mut &i32` may not be safely transferred across an unwind boundary
   |
   = help: the trait `UnwindSafe` is not implemented for `&mut &mut &i32`
   = note: `UnwindSafe` is implemented for `&&mut &i32`, but not for `&mut &mut &i32`
note: required by a bound in `assert`
  --> $DIR/not-panic-safe.rs:5:14
   |
LL | fn assert<T: UnwindSafe + ?Sized>() {}
   |              ^^^^^^^^^^ required by this bound in `assert`
help: consider removing 2 leading `&`-references
   |
LL -     assert::<&mut &mut &i32>();
LL +     assert::<&i32>();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
